--- a/styles/main.css
+++ b/styles/main.css
@@ -2,3 +2,46 @@
     margin: 0;
     padding: 0;
 }
+
+:root{
+--color-menu: #4a4a4a;
+--color-bg: #3CDBC0;
+--color-main: #FFFFFF
+}
+
+body{
+    font-family: 'Rubik', sans-serif;
+}
+
+/* HEADER */
+
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+    /*position: fixed;
+    width: 100%;*/
+   
+}
+.logo{
+    width: 155px;
+   padding-bottom: 10px;
+}
+
+/* MENU NAV */
+.menu-nav{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.menu-nav-list{
+    display:flex;
+    list-style: none;
+}
+.menu-nav-list a{
+    font-size: 16px;
+    color: var(--color-menu);
+    margin-right: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
