--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,21 @@
 *{
-    margin: 0;
-    padding: 0;
+ margin: 0;
+ padding: 0;
 }
 
 :root{
 --color-menu: #4a4a4a;
 --color-bg: #3CDBC0;
---color-main: #FFFFFF
+--color-main: #FFFFFF;
 }
 
 body{
     font-family: 'Rubik', sans-serif;
 }
 
+.container{
+    margin: 0 15px;
+}
 /* HEADER */
 
 .header{
@@ -20,19 +23,17 @@ body{
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
-    /*position: fixed;
-    width: 100%;*/
-   
 }
 .logo{
-    width: 155px;
+   width: 155px;
    padding-bottom: 10px;
 }
 
 /* MENU NAV */
+
 .menu-nav{
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 13px;
 }
 .menu-nav-list{
     display:flex;
@@ -41,7 +42,26 @@ body{
 .menu-nav-list a{
     font-size: 16px;
     color: var(--color-menu);
-    margin-right: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     text-decoration: none;
     text-transform: uppercase;
   }
+
+/* MAIN */
+
+.main{
+    background-color:var(--color-bg);
+    height: 100vh;
+  }
+
+  .text-main-title{
+    text-align: center;
+    padding: 200px 50px;
+  }
+  .main-text{
+   display: block;
+   font-size: 30px;
+   color: var(--color-main);
+  }
+  
