--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 *{
  margin: 0;
  padding: 0;
+ box-sizing: border-box;
 }
 
 :root{
@@ -24,7 +25,7 @@ body{
 }
 .logo{
    width: 155px;
-   padding-bottom: 10px;
+   padding: 10px 0;
 }
 
 /* MENU NAV */
@@ -64,16 +65,19 @@ body{
   }
   
   @media all and (min-width: 768px){
+    
+    /* header */
     .container-header{
         max-width: 1120px;
         margin: 0 auto;
         padding: 0 30px;
     }
-
+    .logo{
+        padding: 20px 0;
+     }
     .header{
         display: flex;
         flex-direction: row;
-        align-items: center;
         justify-content: space-between;
     }
 
