--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 :root{
 --color-menu: #4a4a4a;
 --color-bg: #3CDBC0;
---color-main: #FFFFFF;
+--color-main: white;
 }
 
 body{
@@ -25,7 +25,7 @@ body{
     position: fixed;
     left:0;
     right:0;
-    top: 30px;
+    top: 0;
     z-index: 999;
 
 }
@@ -44,7 +44,7 @@ body{
     display:flex;
     list-style: none;
 }
-.menu-nav-list a{
+.menu-nav-list .link{
     font-size: 16px;
     color: var(--color-menu);
     padding-right: 10px;
@@ -67,7 +67,8 @@ body{
     padding: 200px 50px;
   }
   .main-text{
-   display: block;
+   display: flex;
+   flex-direction: column;
    font-size: 30px;
    color: var(--color-main);
   }
